feat - adiciona mapeamento para as entidades Categoria, Cliente, Pessoa, Produto e Usuario, além de implementar a lógica de criação e atualização nos serviços correspondentes, com melhorias na estrutura de código e validações.