@@ -2,26 +2,17 @@ package br.com.rodrigo.gestortarefas.api.teste;
 
 import br.com.rodrigo.gestortarefas.api.exception.ObjetoNaoEncontradoException;
 import br.com.rodrigo.gestortarefas.api.exception.ViolacaoIntegridadeDadosException;
-import br.com.rodrigo.gestortarefas.api.model.Categoria;
 import br.com.rodrigo.gestortarefas.api.model.Cliente;
 import br.com.rodrigo.gestortarefas.api.model.Endereco;
-import br.com.rodrigo.gestortarefas.api.model.Perfil;
 import br.com.rodrigo.gestortarefas.api.model.Pessoa;
-import br.com.rodrigo.gestortarefas.api.model.Produto;
 import br.com.rodrigo.gestortarefas.api.model.Usuario;
 import br.com.rodrigo.gestortarefas.api.model.form.ClienteForm;
-import br.com.rodrigo.gestortarefas.api.model.form.ProdutoForm;
-import br.com.rodrigo.gestortarefas.api.model.response.CategoriaResponse;
+import br.com.rodrigo.gestortarefas.api.model.form.UsuarioForm;
 import br.com.rodrigo.gestortarefas.api.model.response.ClienteResponse;
-import br.com.rodrigo.gestortarefas.api.model.response.PerfilResponse;
-import br.com.rodrigo.gestortarefas.api.model.response.ProdutoResponse;
+import br.com.rodrigo.gestortarefas.api.model.response.UsuarioResponse;
 import br.com.rodrigo.gestortarefas.api.repository.ClienteRepository;
-import br.com.rodrigo.gestortarefas.api.repository.ProdutoRepository;
-import br.com.rodrigo.gestortarefas.api.services.ICategoria;
-import br.com.rodrigo.gestortarefas.api.services.IPerfil;
-import br.com.rodrigo.gestortarefas.api.services.S3StorageService;
+import br.com.rodrigo.gestortarefas.api.services.IUsuario;
 import br.com.rodrigo.gestortarefas.api.services.impl.ClienteServiceImpl;
-import br.com.rodrigo.gestortarefas.api.services.impl.ProdutoServiceImpl;
 import br.com.rodrigo.gestortarefas.api.util.ValidadorUtil;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -34,12 +25,8 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.math.BigDecimal;
 import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -64,10 +51,7 @@ class ClienteServiceImplTest {
     private ClienteRepository clienteRepository;
 
     @Mock
-    private IPerfil perfilService;
-
-    @Mock
-    private PasswordEncoder passwordEncoder;
+    private IUsuario usuarioService;
 
     @Mock
     private ValidadorUtil validadorUtil;
@@ -77,35 +61,47 @@ class ClienteServiceImplTest {
 
     private Cliente cliente;
     private ClienteForm clienteForm;
-    private PerfilResponse perfilResponse;
+    private UsuarioResponse usuarioResponse;
 
     @BeforeEach
     void setUp() {
+        // Configuração do cliente
+        Usuario usuario = new Usuario();
+        usuario.setId(1L);
+        usuario.setEmail("teste@email.com");
+
+        Pessoa pessoa = new Pessoa();
+        pessoa.setNome("Test");
+        pessoa.setCpf("12345678900");
+        usuario.setPessoa(pessoa);
+
         cliente = new Cliente();
         cliente.setId(1L);
+        cliente.setUsuario(usuario);
         cliente.setEndereco(new Endereco());
-        cliente.setUsuario(new Usuario());
-        cliente.getUsuario().setPessoa(new Pessoa());
-        cliente.getUsuario().setPerfis(new HashSet<>());
-        cliente.getUsuario().setEmail("teste@email.com");
-        cliente.getUsuario().getPessoa().setNome("Test");
-        cliente.getUsuario().getPessoa().setCpf("12345678900");
 
+        // Configuração do form
         clienteForm = new ClienteForm();
         clienteForm.setEmail("teste@email.com");
         clienteForm.setNome("Test");
         clienteForm.setCpf("12345678900");
         clienteForm.setSenha("senha123");
+        clienteForm.setRua("Rua Teste");
+        clienteForm.setNumero("123");
+        clienteForm.setBairro("Bairro Teste");
+        clienteForm.setCidade("Cidade Teste");
+        clienteForm.setEstado("Estado Teste");
+        clienteForm.setCep("12345-678");
 
-        perfilResponse = new PerfilResponse();
-        perfilResponse.setId(Perfil.CLIENTE);
-        perfilResponse.setNome("CLIENTE");
+        // Configuração do usuarioResponse
+        usuarioResponse = new UsuarioResponse();
+        usuarioResponse.setId(1L);
+        usuarioResponse.setEmail("teste@email.com");
     }
 
     @Test
     void criar_DeveRetornarClienteCriado() {
-        when(perfilService.consultarPorId(any())).thenReturn(Optional.of(perfilResponse));
-        when(passwordEncoder.encode(any())).thenReturn("encoded_password");
+        when(usuarioService.criar(any(UsuarioForm.class))).thenReturn(usuarioResponse);
         when(clienteRepository.save(any(Cliente.class))).thenReturn(cliente);
         doNothing().when(validadorUtil).validarEmailUnico(anyString(), any());
         doNothing().when(validadorUtil).validarCpfUnico(anyString(), any());
@@ -114,29 +110,17 @@ class ClienteServiceImplTest {
 
         assertNotNull(resultado);
         assertEquals(cliente.getId(), resultado.getId());
-        assertEquals(cliente.getUsuario().getEmail(), resultado.getEmail());
-        assertEquals(cliente.getUsuario().getPessoa().getNome(), resultado.getNome());
+        assertEquals(clienteForm.getEmail(), resultado.getEmail());
+        assertEquals(clienteForm.getNome(), resultado.getNome());
+        verify(usuarioService, times(1)).criar(any(UsuarioForm.class));
         verify(clienteRepository, times(1)).save(any(Cliente.class));
-        verify(validadorUtil, times(1)).validarEmailUnico(clienteForm.getEmail(), null);
-        verify(validadorUtil, times(1)).validarCpfUnico(clienteForm.getCpf(), null);
-    }
-
-    @Test
-    void criar_QuandoEmailJaExiste_DeveLancarExcecao() {
-        doThrow(new ViolacaoIntegridadeDadosException("Email já cadastrado"))
-                .when(validadorUtil).validarEmailUnico(anyString(), any());
-
-        assertThrows(ViolacaoIntegridadeDadosException.class,
-                () -> clienteService.criar(clienteForm));
-        verify(clienteRepository, never()).save(any());
     }
 
     @Test
     void atualizar_DeveRetornarClienteAtualizado() {
         Long id = 1L;
-        when(perfilService.consultarPorId(any())).thenReturn(Optional.of(perfilResponse));
-        when(passwordEncoder.encode(any())).thenReturn("encoded_password");
         when(clienteRepository.findById(id)).thenReturn(Optional.of(cliente));
+        when(usuarioService.atualizar(any(), any(UsuarioForm.class))).thenReturn(usuarioResponse);
         when(clienteRepository.save(any(Cliente.class))).thenReturn(cliente);
         doNothing().when(validadorUtil).validarEmailUnico(anyString(), any());
         doNothing().when(validadorUtil).validarCpfUnico(anyString(), any());
@@ -145,20 +129,9 @@ class ClienteServiceImplTest {
 
         assertNotNull(resultado);
         assertEquals(cliente.getId(), resultado.getId());
-        assertEquals(cliente.getUsuario().getEmail(), resultado.getEmail());
+        assertEquals(clienteForm.getEmail(), resultado.getEmail());
+        verify(usuarioService, times(1)).atualizar(any(), any(UsuarioForm.class));
         verify(clienteRepository, times(1)).save(any(Cliente.class));
-        verify(validadorUtil, times(1)).validarEmailUnico(clienteForm.getEmail(), id);
-        verify(validadorUtil, times(1)).validarCpfUnico(clienteForm.getCpf(), id);
-    }
-
-    @Test
-    void atualizar_QuandoClienteNaoEncontrado_DeveLancarExcecao() {
-        Long id = 1L;
-        when(clienteRepository.findById(id)).thenReturn(Optional.empty());
-
-        assertThrows(ObjetoNaoEncontradoException.class,
-                () -> clienteService.atualizar(id, clienteForm));
-        verify(clienteRepository, never()).save(any());
     }
 
     @Test
@@ -167,19 +140,8 @@ class ClienteServiceImplTest {
         when(clienteRepository.findById(id)).thenReturn(Optional.of(cliente));
         doNothing().when(clienteRepository).deleteById(id);
 
-        clienteService.deletar(id);
-
+        assertDoesNotThrow(() -> clienteService.deletar(id));
         verify(clienteRepository, times(1)).deleteById(id);
-    }
-
-    @Test
-    void deletar_QuandoClienteNaoEncontrado_DeveLancarExcecao() {
-        Long id = 1L;
-        when(clienteRepository.findById(id)).thenReturn(Optional.empty());
-
-        assertThrows(ObjetoNaoEncontradoException.class,
-                () -> clienteService.deletar(id));
-        verify(clienteRepository, never()).deleteById(any());
     }
 
     @Test
@@ -197,7 +159,7 @@ class ClienteServiceImplTest {
     @Test
     void buscar_DeveRetornarPaginaDeClientes() {
         Pageable pageable = PageRequest.of(0, 10, Sort.by("id"));
-        Page<Cliente> clientePage = new PageImpl<>(List.of(cliente));
+        Page<Cliente> clientePage = new PageImpl<>(Collections.singletonList(cliente));
 
         when(clienteRepository.findAll(anyString(), anyString(), anyString(),
                 anyString(), anyString(), anyString(), any(Pageable.class)))
@@ -207,8 +169,30 @@ class ClienteServiceImplTest {
                 "email", "nome", "cpf", "cidade", "estado", "cep");
 
         assertNotNull(resultado);
-        assertFalse(resultado.getContent().isEmpty());
+        assertFalse(resultado.isEmpty());
         assertEquals(1, resultado.getContent().size());
         assertEquals(cliente.getId(), resultado.getContent().get(0).getId());
+    }
+
+    @Test
+    void criar_QuandoEmailJaExiste_DeveLancarExcecao() {
+        doThrow(new ViolacaoIntegridadeDadosException("Email já cadastrado"))
+                .when(validadorUtil).validarEmailUnico(anyString(), any());
+
+        assertThrows(ViolacaoIntegridadeDadosException.class,
+                () -> clienteService.criar(clienteForm));
+        verify(clienteRepository, never()).save(any());
+        verify(usuarioService, never()).criar(any());
+    }
+
+    @Test
+    void atualizar_QuandoClienteNaoEncontrado_DeveLancarExcecao() {
+        Long id = 1L;
+        when(clienteRepository.findById(id)).thenReturn(Optional.empty());
+
+        assertThrows(ObjetoNaoEncontradoException.class,
+                () -> clienteService.atualizar(id, clienteForm));
+        verify(clienteRepository, never()).save(any());
+        verify(usuarioService, never()).atualizar(any(), any());
     }
 }
